--- a/src/pages/auth.css
+++ b/src/pages/auth.css
@@ -1,5 +1,6 @@
 .auth-container {
-  width: 100%;
+  position:relative;
+  width: 200%;
   max-width: 400px;
   margin: 5rem auto;
   padding: 2rem;
@@ -9,6 +10,7 @@
   box-shadow: 0 0 12px rgba(0,0,0,0.4);
   display: flex;
   flex-direction: column;
+  margin-left: 235%;
   gap: 1rem;
 }
 
@@ -17,7 +19,9 @@
   flex-direction: column;
   gap: 1rem;
 }
-
+.auth-container h2{
+  text-align: center;
+}
 .auth-container input {
   padding: 0.75rem;
   border-radius: 6px;
